Mokito Testcases added for Customer and Nominee method